--- a/create-my-logo/index.html
+++ b/create-my-logo/index.html
@@ -3,23 +3,23 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
-<link rel="stylesheet" href="/_nuxt/entry.CZs0k3dH.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DFMj1dpU.js">
+<link rel="stylesheet" href="/_nuxt/entry.Dyx5O1Qf.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/jwlcnnHq.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.CJRARE3b.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/_Tca7YJf.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/8Sebzydi.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D_Ei_-ZI.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DMXjgokC.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CdSySbQ2.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CgbLkcDL.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DdFV0WTf.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CLH6yDvh.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Ch5gRBTC.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/ClhE0_o1.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cs0L0Osf.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CP4RS8t7.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C0aD3rTf.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C_qOdZHU.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D3-Il8e_.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B6lrNkXA.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/DFMj1dpU.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1761016987291,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"cf536562-d02d-4575-92a7-6189fd135995",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/jwlcnnHq.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1763869689062,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"141ee717-cca3-4830-848c-f93ea5e48127",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
