--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -3,23 +3,23 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
-<link rel="stylesheet" href="/_nuxt/entry.Dyx5O1Qf.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/jwlcnnHq.js">
+<link rel="stylesheet" href="/_nuxt/entry.CC-XoNLP.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Db7Wp3NJ.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.CJRARE3b.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CdSySbQ2.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CgbLkcDL.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DdFV0WTf.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CLH6yDvh.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DWY0HW_d.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bh1mcHnn.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/NDUQQnrp.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CAauQAyn.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/ClhE0_o1.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D_6hKaYr.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C0aD3rTf.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C_qOdZHU.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/-yKU2p7R.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DFIgErFJ.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B6lrNkXA.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBMCk5el.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/jwlcnnHq.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1763869689063,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"141ee717-cca3-4830-848c-f93ea5e48127",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/Db7Wp3NJ.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1763873656232,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"b57fd5ca-7b1a-4482-91a2-c36b68c138d1",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
