--- a/create-my-logo/index.html
+++ b/create-my-logo/index.html
@@ -4,22 +4,22 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
 <link rel="stylesheet" href="/_nuxt/entry.CC-XoNLP.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Db7Wp3NJ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BtK6swoF.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.CJRARE3b.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DWY0HW_d.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bh1mcHnn.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/NDUQQnrp.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CAauQAyn.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CR2KsfnM.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BDteoICS.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DUiq6mMk.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bepb8FVE.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D_6hKaYr.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/kcoBoarb.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/-yKU2p7R.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DFIgErFJ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CyBK3VLW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/OPMzZk4Y.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBMCk5el.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CXGN83sj.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/Db7Wp3NJ.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1763873656231,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"b57fd5ca-7b1a-4482-91a2-c36b68c138d1",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/BtK6swoF.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1763948358257,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"f97e1869-b6b9-417c-be6a-bccb69475a5d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
